css/screen.css
/*
CSS to add styling for entire site.
Programmers: Jacob Huebner
File Name: screens.css
*/

/*
Material design scale
https://material.io/design/typography/the-type-system.html#type-scale
*/
/* ===================  1. Main HTML Structure =================== */

*, *:before, *:after{
  box-sizing: inherit;
}

html {
  box-sizing: border-box; /* Note: Using border-box instead of content-box */
}

body {
  font-family: 'Roboto', 'Open Sans', 'Lato', 'Oswald', sans-serif;
  font-size: 1em; /* 16px Base font size */
  line-height: 1.5em; /* 24px = 18px * 1.334em - Base line height */
  text-rendering: optimizeLegibility;
}

nav{
  z-index: 1;
  overflow: hidden;
  position: relative;
  background-color: white !important;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

main {
  width: 100%;
  overflow: hidden;
}

section{
  padding: 1rem 1rem;
  background-color: white;
  overflow: hidden;
}

.wrapper{
  width: 100%;
  height: auto;
  background-color: #e5e5e5;
}

.container{
  width: 100%;
  height: auto;
}

footer{
  width: 100%;
  height: auto;
  padding: 1rem 1rem;
  color: grey;
  background-color: white;
  box-shadow: 0px -1.5px 3px -1.5px rgba(0,0,0,0.16);
}


/* ========================  2. Scaled fonts ======================== */

h1 {
  font-size: 6em; /* 96px = 16px * 6em */
  line-height: 6rem; /* 96px = 16px * 6em */
  font-weight: 300; /* light */
  letter-spacing: -0.015625em; /* -1.5 / 96px */
  margin: 0;
} 

h1.margin{
  margin: 0.83em 0;
}

h2 {
  font-size: 3.75em; /* 60px = 16px * 3.75em */
  line-height: 3.75rem;  /* 60px = 16px * 3.75em */
  font-weight: 300; /* light */
  letter-spacing: -.0083333333em; /* -0.5 / 60px */
}

h2.margin{
  margin: 0.83em 0;
}


h3 {
  font-size: 3em; /* 48px = 16px * 3em */
  line-height: 3.125rem;  /* 50px = 16px * 3.125em */
  font-weight: 400; /* regular */
  letter-spacing: normal; /* 0 / 48px */
}

h3.margin{
  margin: 1em 0;
}

h4 {
  font-size: 2.125em; /* 34px = 34px * 2.125em */
  line-height: 2.5rem;  /* 40px = 16px * 2.5em */
  font-weight: 400; /* regular */
  letter-spacing: 0.0073529412em; /* 0.25 / 34px */
}

h4.margin{
  margin: 1.33em 0;
}

h5 {
  font-size: 1.5em; /* 24px = 16px * 1.5em */
  line-height: 2rem;  /* 32px = 16px * 2em */
  font-weight: 400; /* regular */
  letter-spacing: normal; /* 0 / 24px */
}

h5.margin{
  margin: 1.67em 0;
}

h6 {
  font-size: 1.125em; /* 20px = 16px * 1.125em */
  line-height: 2.5rem;  /* 40px = 16px * 2.5em */
  font-weight: 500; /* medium */
  letter-spacing: 0.0125em; /* 0.15 / 20px */
}

h6.margin{
  margin: 2.33em 0;
}

p {
  font-size: 1em; /* 16px = 16px * 1em */
  line-height: 1.5em; /* 24px = 16px * 1.5em */
  font-weight: 400; /* regular */
  letter-spacing: .03125em; /* .5 / 16px */
}

p.margin{
  margin: 1em 0;
}

.body2 {
  font-size: .875em; /* 14px = 16px * .875em */
  line-height: 1.25rem; /* 20px = 16px * 1.25em */
  font-weight: 400; /* regular */
  letter-spacing: .0178571429em; /* .25 / 14px */
}

.subtitle {
  font-size: 1em; /* 16px = 16px * 1em */
  line-height: 1.75em; /* 28px = 16px * 1.75em */
  font-weight: 400;
  letter-spacing: .009375em; /* .15 / 18px */
}

.button{
  font-size: .875em; /* 14px = 16px * .875em */
  line-height: 2.25rem; /* 36px = 16px * 2.25em */
  font-weight: 500; /* medium */
  letter-spacing: .0892857143em; /* 1.25 / 14px */
  text-transform: uppercase;
}

.caption {
  font-size: .75em; /* 12px = 16px * .75em */
  line-height: 1.25rem; /* 20px = 16px * 1.25em */
  font-weight: 400; /* regular */
  letter-spacing: .0333333333em; /* .04 / 12px */
}

.overline {
  font-size: .75em; /* 12px = 16px * .75em */
  line-height: 2rem; /* 32px = 16px * 2em */
  font-weight: 500; /* regular */
  letter-spacing: .1666666667em; /* 1.5 / 12px */
  text-transform: uppercase;
  padding: 0 0 1rem 0;
}


/* ========================  2. Responsive Media ======================== */
img, audio, video {
  display: block;
  max-width: 100%;
}

img {
  margin: 0 auto;      
}


/* ==========================  3. Navigation ========================== */
.menubtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 14px 16px;
  background-color: white;
  color: black;
  text-decoration: none;
}

/* Hamburger menu and logo */
.specialbtn{
  font-weight: 900;
  font-size: 20px
}

/* Navigation items */
.navitemlist{
  clear:both;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.navitemlist li{
  display: inline-block;
}

.navitemlist li a{
  display: inline-block;
  text-decoration: none;
  color: black;
  background-color: white;
  transition: 0.2s;
}

.navitemlist li a:hover {
  position: relative;
  /*background-color: whitesmoke;*/
  box-shadow:inset 0px -4px 0px 0px grey;
  transition: 0.2s;
}

/* Highlight current page */
.active{
  box-shadow:inset 0px -4px 0px 0px grey;
  transition: 0.2s;
}

/* Alignment */
.left{
  float: left;
  cursor: pointer;
}

.alignleft{
  text-align: left;
}

.right{
  float: right;
  cursor: pointer;
}

.alignright{
  text-align: right;
}

/* Show and Hide classes */
.show{
  display: block;
}

.hide{
  display: none;
}

/* Shadows */
.dropshadow{
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.hovershadow:hover{
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  transition: 0.2s;
  transition-delay: 0.3s;
}

section div{
  transition: 0.6s;
  transition-delay: 0.2s;
}

/* padding */
.padtop{
  padding: 2rem 0 0 0;
}

.padbottom{
  padding: 0 0 2rem 0;
}

.padtopbottom{
  padding: 2rem 0 2rem 0;
}

/* ======================== 3.5 Sections ======================== */
/* frame */
.frame{
  padding: 1rem 1rem;
}

/* colors */
.white{
  background-color: white;
}

.grey{
  background-color: #e5e5e5;
}

.lightgrey{
  background-color: #f5f5f5;
}

/* footer */
footer div{
  display: flex;
  justify-content: space-between;
}

footer div p.caption{
  line-height: 2.25rem;
  padding-left: 1rem;
}

/* ======================== 3.6 Drawer ============================== */

/* drawer buttons */
.drawerbtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 12px 32px;
  background-color: white;
  color: grey;
}

.drawertitlebtn{
  border: 0;
  margin: 0;
  padding: 0;
  padding: 12px 32px;
  background-color: white;
  color: black;
}

/* smooth animations (borrowed)*/
.smooth{
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
  margin: 0;
  padding: 0;
  -webkit-text-size-adjust: none;
}

/* hides checkbox */
#drawer-toggle {
  position: absolute;
  opacity: 0;
}

/* changes transition color to be more subtle */
#drawer-toggle-label{
  background-color: rgba(0, 0, 255, 0);
}

/* drawer menu pane */
#drawer {
  z-index: 3;
  position: fixed;
  top: 0;
  left: -300px;
  height: 100%;
  width: 300px;
  background: white;
  overflow-x: hidden;
  overflow-y: scroll;

}

/* checked styles (menu open state) */
#drawer-toggle:checked{
  height: 100%;
  width: calc(100%);
  background: rgba(255, 255, 255, .8);
}

#drawer-toggle:checked ~ #drawer{
  left: 0px;
}

/* edit drawer when checked */
#drawer-toggle:checked ~ #drawer-toggle-label{
  position: fixed;
  height: 100%;
  width: calc(100%);
  color: black;
  background-color: black;
  opacity: .5;
  transition-property: background;
  transition-duration: .2s;
  transition-timing-function: linear;
}

/* fix moved company logo */
#drawer-toggle:checked ~ #logo{
  margin-left: 51.3px;
}

/* Drawer menu items */
.draweritemlist{
  display: block;
  border-bottom: 1px solid lightgray;
}

.draweritemlist li{
  display: block;
}

.draweritemlist li a{
  display: block;
  text-decoration: none;
  background-color: white;
}

.draweritemlist li a:hover {
  background-color: whitesmoke;
}

/* ========================  4. Media queries ======================== */
/* ================ 480px minimum supported resolution ================ */


/* ================ 600px Break Point 1: Extra small ================ */
@media screen and (min-width: 37.5em) { 

  /* Navigation items */
  .navitemlist{
    clear: none;
    text-align: right;
    display: block;
  }

}


/* ================ 840px Break Point 2: Small ================ */
@media screen and (min-width: 52.5em) { 


}


/* ================ 960px Break Point 3: Medium ================ */
@media screen and (min-width: 60em) {

}

/* ================ 1280px Break Point 4: Medium-large ================ */
@media screen and (min-width: 80em) { 

  /* limit size of content area */
  .container{
    max-width: 1280px;
    margin: 0 auto;
  }

}

/* ================ 1440px Break Point 5: Medium-large ================ */
@media screen and (min-width: 90em) { 

  /* hide hamburger menu */
  #drawer-toggle-label{
    display: none;
  }

  #drawer-toggle{
    display: none;
  }

  #drawer{
    display: none;
  }

  #drawer-toggle:checked ~ #logo{
    margin-left: 0;
  }

  /* more to come */

}

/* =============== 1600px Break Point 6: Extra large =============== */
@media screen and (min-width: 100em) {

  /* limit size of content area */
  .container{
    max-width: 1280px;
    margin: 0 auto;
  }

  /* */
}

/* ================ 1920px Break Point 4: extra-large ================ */
@media screen and (min-width: 120em) {

  /* limit size of content area */
  .container{
    max-width: 1600px;
    margin: 0 auto;
  }

  /* */
}

